--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "node-xlsx": "^0.21.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
